--- a/index.html
+++ b/index.html
@@ -3,29 +3,86 @@
 <head>
     <meta charset="UTF-8">
     <title>Калькулятор</title>
+    <style>
+        body {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            background: #f0f0f0;
+            font-family: Arial, sans-serif;
+        }
+        .calc {
+            background: #222;
+            padding: 20px;
+            border-radius: 12px;
+            box-shadow: 0 0 20px rgba(0,0,0,0.4);
+        }
+        .display {
+            width: 100%;
+            height: 60px;
+            margin-bottom: 15px;
+            font-size: 28px;
+            text-align: right;
+            padding: 10px;
+            border: none;
+            border-radius: 8px;
+            background: #eee;
+        }
+        .buttons {
+            display: grid;
+            grid-template-columns: repeat(4, 70px);
+            grid-gap: 10px;
+        }
+        button {
+            height: 60px;
+            font-size: 22px;
+            border: none;
+            border-radius: 8px;
+            background: #444;
+            color: white;
+            cursor: pointer;
+        }
+        button:active {
+            background: #666;
+        }
+        .zero {
+            grid-column: span 2;
+        }
+        .equal {
+            background: #ff9500;
+        }
+        .equal:active {
+            background: #e08400;
+        }
+    </style>
 </head>
 <body>
     <div class="calc">
         <input type="text" class="display" id="display" disabled>
         <div class="buttons">
-        <button onclick="clearDisplay()">C</button>
-        <button onclick="append('1')">1</button>
-        <button onclick="append('2')">2</button>
-        <button onclick="append('3')">3</button>
-        <button onclick="append('4')">4</button>
-        <button onclick="append('5')">5</button>
-        <button onclick="append('6')">6</button>
-        <button onclick="append('7')">7</button>
-        <button onclick="append('8')">8</button>
-        <button onclick="append('9')">9</button>
-        <button onclick="append('0')">0</button>
-        <button onclick="append('+')">+</button>
-        <button onclick="append('-')">-</button>
-        <button onclick="append('*')">*</button>
-        <button onclick="append('/')">/</button>
-        <button onclick="append('.')">.</button>
-        <button onclick="back()">Back</button>
-        <button onclick="calculate()">=</button>
+            <button onclick="clearDisplay()">C</button>
+            <button onclick="back()">⌫</button>
+            <button onclick="append('.')">.</button>
+            <button onclick="append('/')">/</button>
+
+            <button onclick="append('7')">7</button>
+            <button onclick="append('8')">8</button>
+            <button onclick="append('9')">9</button>
+            <button onclick="append('*')">×</button>
+
+            <button onclick="append('4')">4</button>
+            <button onclick="append('5')">5</button>
+            <button onclick="append('6')">6</button>
+            <button onclick="append('-')">−</button>
+
+            <button onclick="append('1')">1</button>
+            <button onclick="append('2')">2</button>
+            <button onclick="append('3')">3</button>
+            <button onclick="append('+')">+</button>
+
+            <button class="zero" onclick="append('0')">0</button>
+            <button class="equal" onclick="calculate()">=</button>
         </div>
     </div>
 
@@ -42,44 +99,31 @@
 
       function append(val){
         if (display.value === 'Error') display.value = '';
-
         const cur = display.value;
         const last = cur.slice(-1);
 
         if (isOp(val)){
-          if (!cur){ return; }
-          if (isOp(last)){
-            display.value = cur.slice(0, -1) + val;
-          } else {
-            display.value += val;
-          }
-          display.scrollLeft = display.scrollWidth;
+          if (!cur) return;
+          if (isOp(last)) display.value = cur.slice(0, -1) + val;
+          else display.value += val;
           return;
         }
 
         if (val === '.'){
           const token = lastToken();
           if (token.includes('.')) return;
-          if (!cur || isOp(last)){
-            display.value += '0.';
-          } else {
-            display.value += '.';
-          }
-          display.scrollLeft = display.scrollWidth;
+          if (!cur || isOp(last)) display.value += '0.';
+          else display.value += '.';
           return;
         }
 
         display.value += val;
-        display.scrollLeft = display.scrollWidth;
       }
 
       function clearDisplay(){ display.value = ''; }
 
       function back(){
-        if (display.value === 'Error'){
-          display.value = '';
-          return;
-        }
+        if (display.value === 'Error'){ display.value = ''; return; }
         display.value = display.value.slice(0, -1);
       }
 
@@ -87,14 +131,9 @@
         try{
           const expr = display.value;
           if (!expr) return;
-          if (/\/(?:0(?!\.))/.test(expr)){
-            display.value = 'Error';
-            return;
-          }
+          if (/\/(?:0(?!\.))/.test(expr)){ display.value = 'Error'; return; }
           display.value = String(eval(expr));
-        }catch(e){
-          display.value = 'Error';
-        }
+        }catch(e){ display.value = 'Error'; }
       }
     </script>
 </body>
